# task-tracker

./: .env.example  .env.example.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SQL.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
static/css/: styles.css
tasktracker/: asgi.py  settings.py  urls.py  wsgi.py
tasktracker/apps/tracker/: admin.py  apps.py  models.py  urls.py  views.py
tasktracker/apps/tracker/migrations/: 0001_initial.py  0002_remove_project_updated_at_remove_task_description_and_more.py
tasktracker/apps/tracker/templates/tracker/: index.html
tasktracker/apps/tracker/templates/tracker/partials/projects/: create_project.html  detail_project.html  project_create.html  project_list.html  project_update.html
tasktracker/apps/tracker/templates/tracker/partials/tasks/: create_task.html  task_create.html  task_item.html  task_list.html  task_update.html  update_task.html
tasktracker/apps/tracker/views/: common_views.py  project_views.py  tasks_views.py
tasktracker/apps/tracker/views/projects/: project_views.py
tasktracker/apps/tracker/views/tasks/: tasks_views.py
tasktracker/apps/users/: apps.py  urls.py
tasktracker/apps/users/templates/account/: login.html  signup.html
templates/: base.html
templates/account/: login.html  signup.html
tests/: conftest.py  factories.py  test_integration.py  test_models.py  test_project_views.py  test_task_views.py
